# PSOLOMON

./: .env.example  .gitignore  README.md
.claude/agents/: learndash-specialist.md
docs/: LEARNDASH_ENHANCEMENTS.md  LEARNDASH_TESTING_GUIDE.md  README.md
mcp-server/: .env.example  ATTACK_SCENARIOS_PREVENTED.md  SECURITY_FIXES_SUMMARY.md  SECURITY_QUICK_REFERENCE.md  pyproject.toml
mcp-server/src/: __init__.py  backup_manager.py  config.py  image_optimizer.py  learndash_manager.py  seo_tools.py  server.py  woocommerce_manager.py  wp_api.py  wp_cli.py
mcp-server/src/wordpress_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp-server/tests/: test_security_fixes.py
scripts/: README.md  deploy_plugin.sh
wordpress-plugins/sst-affiliate-manager/: sst-affiliate-manager.php
wordpress-plugins/sst-affiliate-manager/admin/: class-admin-dashboard.php  class-affiliate-list-table.php
wordpress-plugins/sst-affiliate-manager/admin/css/: admin-styles.css
wordpress-plugins/sst-affiliate-manager/admin/views/: affiliate-detail.php  dashboard.php  settings.php
wordpress-plugins/sst-affiliate-manager/includes/: class-affiliate.php  class-affiliate.php.backup-20251203-v2  class-commission-manager.php  class-coupon-manager.php  class-coupon-manager.php.backup-20251203-v2  class-database.php  class-email-notifications.php  class-form-handler.php  class-form-handler.php.backup-20251203  class-qr-generator.php  class-zapier.php
